# aiida_eos

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/aiida_eos/: __init__.py  eos.py  rescale.py
tests/: conftest.py  test_eos.py  test_import.py  test_rescale.py
tests/sssp_pseudos/: SSSP-1.1-PBE-efficiency.json
